log
Thu 14 Sep 2023 05:24:51 PM UTC: 
 tests:  1|8
total_score: 0/70
60e974c
Thu 14 Sep 2023 05:41:45 PM UTC: 
 treemap.c | 57 +++++++++++++++++++++------------------------------------
 1 file changed, 21 insertions(+), 36 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:3: error: ‘new’ undeclared (first use in this function)
   44 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2165d08
